# crm_build

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker_update.py  nginx.conf  pyproject.toml  yml_update.py
.github/workflows/: main.yml
crm/backend/: models.py
crm/crm/: settings.py  urls.py
crm/crm_build/: models.py  urls.py  utils.py  views.py
crm/crm_build/templates/: actions.html  all_buyers.html  all_sale_objects.html  all_sell_objects.html  base.html  buyer.html  comments.html  duplicates.html  events.html  filter.html  index.html  info.html  object.html  pagination.html  photo.html  sell_info.html
crm/static/css/: style.css
local/: docker-compose.yml
