[tool.poetry]
name = "crm"
version = "0.1.0"
description = ""
authors = ["Akinshin Anatolii <a.akinshin@satvaspace.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
